fixed watermark overlapping issue
git-svn-id: https://sourcemap.codebasehq.com/sourcemap/smap.svn/trunk@970 ab0f7204-c6de-4229-9497-6c0baa3b4d53

--- a/www/assets/styles/base.less
+++ b/www/assets/styles/base.less
@@ -298,7 +298,7 @@
     text-align:center;
     position:absolute;
     bottom:1em; left:0;
-    z-index:0;
+    z-index:1010;
 }
 
 
